# enterprise-rag

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: evaluation_cases.jsonl
docker/: Dockerfile.api  Dockerfile.frontend
docs/: api.md  architecture.md  deployment.md  evaluation.md  interview-prep.md
reports/: evaluation-report.json  evaluation-report.md
src/enterprise_rag/: __init__.py  config.py  db.py  schemas.py
src/enterprise_rag/api/: dependencies.py  main.py
src/enterprise_rag/api/routers/: admin.py  auth.py  chat.py  documents.py
src/enterprise_rag/auth/: security.py  seed.py
src/enterprise_rag/evaluation/: evaluate.py
src/enterprise_rag/frontend/: app.py
src/enterprise_rag/frontend/pages/: 1_Admin.py
src/enterprise_rag/ingestion/: chunking.py  loaders.py
src/enterprise_rag/providers/: embeddings.py  llm.py
src/enterprise_rag/rag/: memory.py  pipeline.py
src/enterprise_rag/retrieval/: llamaindex_store.py  retriever.py  vector_store.py
tests/: test_api_admin.py  test_api_auth.py  test_api_chat.py  test_api_documents.py  test_chunking.py  test_evaluation.py  test_llamaindex_store.py  test_loaders.py  test_pipeline.py  test_retriever.py  test_security.py  test_seed.py  test_vector_store.py
