[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Production-shaped enterprise RAG platform: FastAPI backend, Streamlit frontend, LangChain + LlamaIndex retrieval, Chroma vector store, auth, and an admin dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Qianxi Lu" },
]
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.38.0",
    "streamlit>=1.52.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "llama-index-core>=0.13.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "chromadb>=1.1.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "tiktoken>=0.13.0",
    "sqlalchemy>=2.0.43",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rag-evaluate = "enterprise_rag.evaluation.evaluate:main"
seed-admin = "enterprise_rag.auth.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_rag"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
